--- a/jogodados/pom.xml
+++ b/jogodados/pom.xml
@@ -35,9 +35,15 @@
     
     <build>
         <resources>
-            <resource>
-                <directory>/src/main/resources</directory>
-            </resource>
+                <resource>
+                    <directory>src/main/resources</directory>
+                </resource>
+                <resource>
+                    <directory>src/main/resources/images</directory>
+                </resource>
+                <resource>
+                    <directory>src/main/resources/fxml</directory>
+                </resource>
         </resources>
         
         <plugins>
